--- a/scripts/30_sandre.Rmd
+++ b/scripts/30_sandre.Rmd
@@ -5,7 +5,7 @@ date: "`r Sys.Date()`"
 output: html_document
 ---
 
-```{r setup, echo = FALSE,}
+```{r setup, echo = FALSE, eval = FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
   cache = FALSE,
@@ -20,15 +20,20 @@ knitr::opts_chunk$set(
 
 Il s'agit de montrer comment accéder simplement à une masse de "lots de données de référence" disponibles via le flux WFS du Sandre avec le logiciel R et de la fonction `wfs_sandre()` du package `tod`.
 
+# Activation des `packages` :
+
+```{r, eval = TRUE, message = F, warning = F}
+library(tod)
+library(tidyverse)
+library(mapview)
+```
+
+
 # Les données Sandre
 
 Pour s'y retrouver parmi les données diffusées sur le portail du Sandre, il est utile de se reporter à [cette page](https://www.sandre.eaufrance.fr/actualite/evolution-des-services-web-g%C3%A9ographiques). Ces référentiels géographiques concernent les thèmes suivants :
 
 ```{r, eval = T, echo = F}
-library(tod)
-library(tidyverse)
-library(mapview)
-
 read.csv2("../assets/flux_sandre.csv") %>% 
   DT::datatable()
 ```
@@ -53,20 +58,11 @@ Si l'on ajoute un suffixe on peut ne charger que :
 
 Les étapes de configuration de la machine et d'installation des packages sont considérées comme déjà réalisées. Si ce n'est pas le cas se reporter à [ces explications](https://rpubs.com/kamoke/723467).
 
-Activation des `packages` :
-
-```{r, eval = F, message=F, warning=F}
-library(tod)
-library(tidyverse)
-library(mapview)
-```
-
-
 # Banque Nationale des Prélèvements d'eau (BNPE)
 
 On peut accéder aux couches relatives aux ouvrages et aux points de prélèvement (NB les fichiers sont lourds donc le chargement prend un certain temps).
 
-```{r, eval = F}
+```{r}
 bnpe_ouvrages <- wfs_sandre(url_wfs = "https://services.sandre.eaufrance.fr/geo/prl",
                             couche = "OuvragePrel")
 
@@ -78,7 +74,7 @@ bnpe_points_prel <- wfs_sandre(url_wfs = "https://services.sandre.eaufrance.fr/g
 
 # Référentiel des obstacles à l'écoulement (ROE)
 
-```{r, eval = F}
+```{r}
 obstacles_ecoulement <- wfs_sandre(url_wfs = "https://services.sandre.eaufrance.fr/geo/obs",
                                    couche = "ObstEcoul")
 ```
@@ -90,7 +86,7 @@ obstacles_ecoulement <- wfs_sandre(url_wfs = "https://services.sandre.eaufrance.
 
 Chargement :
 
-```{r, eval = T}
+```{r, eval = TRUE}
 her2 <-
   wfs_sandre(url_wfs = "https://services.sandre.eaufrance.fr/geo/mdo?",
              couche = "Hydroecoregion2")
@@ -98,7 +94,7 @@ her2 <-
 
 Affichage :
 
-```{r, eval = T}
+```{r}
 ggplot(her2) +
   geom_sf()
 ```
@@ -118,7 +114,7 @@ ggplot(bassins_hydro) +
 
 D'autres couches (certaines, dépassant 100Mo, sont longues à télécharger si votre connexion est faiblarde).
 
-```{r, eval = F}
+```{r}
 bv_topo <-
   wfs_sandre(url_wfs = "https://services.sandre.eaufrance.fr/geo/topage?",
              couche = "BassinVersantTopographique_FXX")
@@ -141,7 +137,7 @@ La [BD CarTHAgE](https://geo.data.gouv.fr/fr/datasets/82a7d05cc2e7bc060a62ba9587
 
 Par exemple pour le découpage hydrographique en "secteurs hydrographiques", plus fin que les "bassins hydrographiques" de Topage ci-dessus : 
 
-```{r, eval = FALSE}
+```{r, eval = TRUE}
 bv <-
   tod::wfs_sandre(url_wfs = "https://services.sandre.eaufrance.fr/geo/sandre",
                   couche = "SecteurHydro_FXX")
@@ -157,7 +153,7 @@ bv %>%
 
 Ce sont les stations où sont effectuées les mesures de débit consultables via la banque HYDRO :
 
-```{r, eval = FALSE}
+```{r}
 stations_hydro <-
   wfs_sandre(url_wfs = "https://services.sandre.eaufrance.fr/geo/hyd?",
              couche = "StationHydro")
@@ -172,7 +168,7 @@ sites_hydro <-
 
 Exemple de Mayotte :
 
-```{r, eval = FALSE}
+```{r, eval = TRUE}
 entites_hydrogeol_myt <-
   wfs_sandre(url_wfs = "http://services.sandre.eaufrance.fr/geo/saq?",
              couche = "EntiteHydroGeol_MYT")
@@ -184,7 +180,7 @@ mapview::mapview(entites_hydrogeol_myt,
 
 # Contrats de milieu (contrats de rivière)
 
-```{r, eval = FALSE}
+```{r}
 cdm <-
   wfs_sandre(url_wfs = "https://services.sandre.eaufrance.fr/geo/zpl?",
              couche = "ContratMilieu_FXX")
